# financial-planner

./: .gitignore  Dockerfile  PITCH_DECK.md  README.md  docker-compose.yml  main.py  pyproject.toml
financial_backend/: api.py  config.py  main.py  memory.py  utils.py
financial_backend/agents/: allocation_planner.py  cashflow_projection.py  orchestrator.py  profile_analyzer.py  scenario_simulator.py  validator.py
